--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
+        <!-- /.container .. -->
     </nav>
 
     <!-- Page Header -->
