added denate button

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                         <h3><span class="subheading" style="font-family:cursive">"Many small people, in small places, doing small things, can change the world."</span></h3>
                         <hr class="small">
                         <span class="subheading ">Eduardo Galeano</span>
+                        <a class="btn button" href="">DONATE</a>
+                    </div>
+                    <div>
+                        <img src="">
                     </div>
                 </div>
             </div>
@@ -98,6 +102,9 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
+        <div class="embed-container">
+ <iframe src="http://www.youtube.com/embed/jLHGnvnw-gI" frameborder="0"> </iframe>
+</div>
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
