added image, fixed positioning in home page

--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h3><span class="subheading" style="font-family:cursive">"Many small people, in small places, doing small things, can change the world."</span></h3>
-                        <hr class="small">
-                        <span class="subheading ">Eduardo Galeano</span>
-                        <a class="btn button" href="">DONATE</a>
-                    </div>
-                    <div>
-                        <img src="">
+                        <div class ="textheading">
+                            <h3><span class="subheading" style="font-family:cursive">"Many small people, in small places, doing small things, can change the world."</span></h3>
+                            <hr class="small">
+                            <span class="subheading ">Eduardo Galeano</span>
+                            <a class="btn button" href="http://team45.actionagainsthungerevents.ca/uottawa">DONATE</a>
+                            <div class = image >
+                            <img src="img/logo.png" width="25%" height="auto">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
