--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog</title>
+    <title>ACF UOttawa</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -104,9 +104,10 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
-        <div class="embed-container">
- <iframe src="http://www.youtube.com/embed/jLHGnvnw-gI" frameborder="0"> </iframe>
-</div>
+            <div class = "container video">
+                <h1 align="center">Meet Action Against hunger</h1>
+                <iframe width="1120" height="630" src="https://www.youtube.com/embed/TUEBf9-oxcs" frameborder="0" allowfullscreen></iframe>
+            </div>
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
