--- a/index.html
+++ b/index.html
@@ -102,12 +102,17 @@
     </header>
 
     <!-- Main Content -->
+    <div class ="row">
+            <div class = "video col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <h1 align="center">Meet Action Against hunger</h1>
+                <div style ="margin-top:50px" class="embed-responsive embed-responsive-16by9">
+                    <iframe src="https://www.youtube.com/embed/TUEBf9-oxcs" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+
     <div class="container">
         <div class="row">
-            <div class = "container video">
-                <h1 align="center">Meet Action Against hunger</h1>
-                <iframe width="1120" height="630" src="https://www.youtube.com/embed/TUEBf9-oxcs" frameborder="0" allowfullscreen></iframe>
-            </div>
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
