--- a/events.html
+++ b/events.html
@@ -127,23 +127,22 @@
                           <li>29</li>
                           <li>30</li>
                           <li>31</li>
-                          <li><span class="active">1</span></li>
+                          <li>1</li>
                           <li>2</li>
                           <li>3</li>
                           <li>4</li>
-                          <li><span class="clubweek">5</span></li>
-                          <li><span class="clubweek">6</span></li>
-                          <li><span class="clubweek">7</span></li>
-                          <li><span class="clubweek">8</span></li>
-                          <li><span class="clubweek">9</span></li>
+                          <li>5</li>
+                          <li>6</li>
+                          <li>7</li>
+                          <li>8</li>
+                          <li>9</li>
                           <li>10</li>
                           <li>11</li>
                           <li>12</li>
                           <li>13</li>
                           <li>14</li>
                           <li>15</li>
-                          <li>                        <button id="myBtn">16</button>
-</li>
+                          <li><span id="myBtn" style="cursor:pointer" class="clubweek">16</span></li>
                           <li>17</li>
                           <li>18</li>
                           <li>19</li>
