Added french files

--- a/contactFR.html
+++ b/contactFR.html
@@ -54,22 +54,22 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="indexFR.html">Accueil</a>
                     </li>
                     <li>
-                        <a href="post.html">News</a>
+                        <a href="postFR.html">Nouvelles</a>
                     </li>
                     <li>
-                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Donate</a>
+                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Faire un Don</a>
                     </li>
                     <li>
-                        <a href="events.html">Events</a>
+                        <a href="eventsFR.html">Évènements</a>
                     </li>
                     <li>
-                        <a href="about.html">Meet the team</a>
+                        <a href="aboutFR.html">L'Équipe</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact US</a>
+                        <a href="contactFR.html">Contactez nous</a>
                     </li>
 
                 </ul>
