--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">En </a> 
-                <a class="navbar-brand" href="index.html">Fr</a>
+                <a class="navbar-brand" href="indexFR.html">Fr</a>
                
 
             </div>
