--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">En </a> 
-                <a class="navbar-brand" href="index.html">Fr</a>
+                <a class="navbar-brand" href="about.html">En </a> 
+                <a class="navbar-brand" href="aboutFR.html">Fr</a>
                
 
             </div>
