--- a/events.html
+++ b/events.html
@@ -50,8 +50,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">En </a> 
-                <a class="navbar-brand" href="index.html">Fr</a>
+                <a class="navbar-brand" href="events.html">En </a> 
+                <a class="navbar-brand" href="eventsFR.html">Fr</a>
                
 
             </div>
