--- a/post.html
+++ b/post.html
@@ -44,8 +44,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">En </a> 
-                <a class="navbar-brand" href="index.html">Fr</a>
+                <a class="navbar-brand" href="post.html">En </a> 
+                <a class="navbar-brand" href="postFR.html">Fr</a>
                
 
             </div>
