--- a/aboutFR.html
+++ b/aboutFR.html
@@ -89,9 +89,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>Meet the team!</h1>
+                        <h1>L'équipe!</h1>
                         <hr class="small">
-                        <span class="subheading">Current members of the uOttawa ACF chapter.</span>
+                        <span class="subheading">Membres de ACF uOttawa.</span>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                
+                <h4>À venir bientôt! </h4>
+<!--
                 <table>
                     <tr>
                         <td>  
@@ -131,6 +132,7 @@
                         </td>
                     </tr>
                 </table>
+-->
                 
             </div>
         </div>
