--- a/eventsFR.html
+++ b/eventsFR.html
@@ -92,9 +92,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>Events</h1>
+                        <h1>Évènements</h1>
                         <hr class="small">
-                        <span class="subheading">2016-2017 academic year</span>
+                        <span class="subheading">année scholaire 2016-2017 </span>
                     </div>
                 </div>
             </div>
@@ -107,18 +107,18 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                         <div class="month">
                           <ul>
-                            <li style="text-align:center">September<br><span style="font-size:18px">2016</span>
+                            <li style="text-align:center">Septembre<br><span style="font-size:18px">2016</span>
                             </li>
                           </ul>
                         </div>
 
                         <ul class="weekdays">
-                          <li>Su</li>
-                          <li>Mo</li>
-                          <li>Tu</li>
-                          <li>We</li>
-                          <li>Th</li>
-                          <li>Fr</li>
+                          <li>Di</li>
+                          <li>Lu</li>
+                          <li>Ma</li>
+                          <li>Me</li>
+                          <li>Je</li>
+                          <li>Ve</li>
                           <li>Sa</li>
                         </ul>
 
@@ -169,8 +169,9 @@
                           <!-- Modal content -->
                           <div class="modal-content">
                             <span class="close">x</span>
-                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">
-                            <p>101 Club week event. Blah Blah BBQ Table whatever</p>
+<!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
+                            <h1>Semaine des clubs </h1>
+                              <p> Venez visiter notre table lors de la semaine des clubs. Vous aurrez la chance de rencontrez nos membres et également l'opportinité de nous joindres.</p>
                           </div>
 
                         </div>
