--- a/about.html
+++ b/about.html
@@ -102,7 +102,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                
+                <h4>Coming Soon! </h4>
+<!--
                 <table>
                     <tr>
                         <td>  
@@ -131,6 +132,7 @@
                         </td>
                     </tr>
                 </table>
+-->
                 
             </div>
         </div>
