--- a/contactFR.html
+++ b/contactFR.html
@@ -86,9 +86,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>Contact Us</h1>
+                        <h1>Contactez Nous</h1>
                         <hr class="small">
-                        <span class="subheading">Have questions? Send them our way.</span>
+                        <span class="subheading">Avez-vous des questions?</span>
                     </div>
                 </div>
             </div>
@@ -99,36 +99,36 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Fill out the form below to send us a message and we will try to get back to you within 24 hours!</p>
+                <p>Remplissez le formulaire ci-dessous pour nous envoyer un message.</p>
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
                 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
                 <form name="sentMessage" id="contactForm" novalidate>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Name</label>
-                            <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                            <label>Nom</label>
+                            <input type="text" class="form-control" placeholder="Nom" id="name" required data-validation-required-message="Nom obligatoire.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Email Address</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                            <label>Adresse e-mail</label>
+                            <input type="email" class="form-control" placeholder="Adresse e-mail" id="email" required data-validation-required-message="Adresse E-mail obligatoire..">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Phone Number</label>
-                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                            <label>Numéro de téléphone</label>
+                            <input type="tel" class="form-control" placeholder="Numéro de téléphone" id="phone" required data-validation-required-message="Numéro de téléphone obligatoire.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Message</label>
-                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Message obligatoire."></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
