changed banner color

--- a/events.html
+++ b/events.html
@@ -169,8 +169,9 @@
                           <!-- Modal content -->
                           <div class="modal-content">
                             <span class="close">x</span>
-                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">
-                            <p>101 Club week event. Blah Blah BBQ Table whatever</p>
+<!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
+                            <h1>Club week</h1>
+                              <p>Come check out our table where will you will have the opportunity to meet our members as well as learn about the various events we hold to raise founds for the cause. You can also register to join our club. </p>
                           </div>
 
                         </div>
