changed banner color

--- a/post.html
+++ b/post.html
@@ -81,7 +81,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-color: rgba(34, 196, 52, 0.9)">
+    <header class="intro-header" style="background-color: rgba(57, 175, 70, 0.9)">
         <div class="container">
             <div class="row">
                <!--Change offset of lg to 2 if title too long and looks missplaced-->
@@ -114,7 +114,7 @@
                           </div>
                           <div id="collapse1" class="panel-collapse collapse">
                             <ul class="list-group">
-                                <li class="list-group-item"><a href="index.html"><small>Co-Presidents inspiration for the cause</small></a></li>
+                                <li class="list-group-item"><a href="post.html"><small>Co-Presidents inspiration for the cause</small></a></li>
 <!--
                               <li class="list-group-item">Two</li>
                               <li class="list-group-item">Three</li>
