--- a/events.html
+++ b/events.html
@@ -171,7 +171,7 @@
                             <span class="close">x</span>
 <!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
                             <h1>Club week</h1>
-                              <p>Come check out our table where will you will have the opportunity to meet our members as well as learn about the various events we hold to raise founds for the cause. You can also register to join our club. </p>
+                              <p>Come check out our table where you will have the opportunity to meet our members as well as learn about the various events we hold to raise funds for the cause. You will also have the opportunity to join our club. </p>
                           </div>
 
                         </div>
