--- a/eventsFR.html
+++ b/eventsFR.html
@@ -171,7 +171,7 @@
                             <span class="close">x</span>
 <!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
                             <h1>Semaine des clubs </h1>
-                              <p> Venez visiter notre table lors de la semaine des clubs. Vous aurrez la chance de rencontrez nos membres et également l'opportinité de nous joindres.</p>
+                              <p> Venez visiter notre table lors de la semaine des clubs. Vous aurrez la chance de rencontrez nos membres et également l'opportinité de nous joindres en tant que bénévole.</p>
                           </div>
 
                         </div>
