update banner color and remove EN tab

--- a/post.html
+++ b/post.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="post.html">En </a> 
+<!--                <a class="navbar-brand" href="post.html">En </a> -->
                 <a class="navbar-brand" href="postFR.html">Fr</a>
                
 
@@ -81,7 +81,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-color: rgba(57, 175, 70, 0.9)">
+    <header class="intro-header" style="background-color: #392aa7">
         <div class="container">
             <div class="row">
                <!--Change offset of lg to 2 if title too long and looks missplaced-->
