--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="about.html">En </a> 
+<!--                <a class="navbar-brand" href="about.html">En </a> -->
                 <a class="navbar-brand" href="aboutFR.html">Fr</a>
                
 
