--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">En </a> 
+<!--                <a class="navbar-brand" href="index.html">En </a> -->
                 <a class="navbar-brand" href="indexFR.html">Fr</a>
                
 
