update banner color and remove FR tab

--- a/aboutFR.html
+++ b/aboutFR.html
@@ -48,7 +48,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="about.html">En </a> 
-                <a class="navbar-brand" href="aboutFR.html">Fr</a>
+<!--                <a class="navbar-brand" href="aboutFR.html">Fr</a>-->
                
 
             </div>
