--- a/contactFR.html
+++ b/contactFR.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="contact.html">En </a> 
-                <a class="navbar-brand" href="contactFR.html">Fr</a>
+<!--                <a class="navbar-brand" href="contactFR.html">Fr</a>-->
                
 
             </div>
@@ -81,7 +81,7 @@
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
 <!--    <header class="intro-header" style="background-image: url('img/contact-bg.jpg')">-->
-    <header class="intro-header" style="background-color: #5cafeb">
+    <header class="intro-header" style="background-color: #392aa7">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
