--- a/eventsFR.html
+++ b/eventsFR.html
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="events.html">En </a> 
-                <a class="navbar-brand" href="eventsFR.html">Fr</a>
+<!--                <a class="navbar-brand" href="eventsFR.html">Fr</a>-->
                
 
             </div>
@@ -87,7 +87,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-color: rgb(255, 160, 7)">
+    <header class="intro-header" style="background-color: #392aa7">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
