--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="post.html">News</a>
                     </li>
                     <li>
-                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Donate</a>
+                        <a href="http://team45.actionagainsthungerevents.ca/uottawa" target="_blank">Donate</a>
                     </li>
                     <li>
                         <a href="events.html">Events</a>
@@ -96,7 +96,7 @@
                             <h3><span class="subheading" style="font-family:cursive">"Many small people, in small places, doing small things, can change the world."</span></h3>
                             <hr class="small">
                             <span class="subheading ">Eduardo Galeano</span>
-                            <a class="btn button" href="http://team45.actionagainsthungerevents.ca/uottawa">DONATE</a>
+                            <a class="btn button" href="http://team45.actionagainsthungerevents.ca/uottawa" target="_blank">DONATE</a>
                                             
                             
                             <div id="sample_goal"></div>
@@ -124,50 +124,16 @@
             </div>
         </div>
 
-    <div class="container">
+    <div class="container" style="margin-top:100px">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Want to get in touch with us? Fill out the form below to send us a message and we will try to get back to you within 24 hours!</p>
-                <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-                <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-                <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-                <form name="sentMessage" id="contactForm" novalidate>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Name</label>
-                            <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Email Address</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Phone Number</label>
-                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Message</label>
-                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <br>
-                    <div id="success"></div>
-                    <div class="row">
-                        <div class="form-group col-xs-12">
-                            <button type="submit" class="btn btn-default">Send</button>
-                        </div>
-                    </div>
-                </form>
+            <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+            <h2>The Story:</h2>
+                <p>Join students from the University of Ottawa contribute to the fight against world hunger by supporting our page! We believe that no person should be denied basic human necessities such as living provisions, education and sanitation. This is why we have come together to inform our peers at the University of Ottawa about this issue and start a chain reaction in our community to make a change for the better! </p>
+                <p>
+
+Hunger claims one million young lives every year, but for the first time in history, game changing solutions are within our reach. Using ready-to-use therapeutic foods, we can now treat children at home, and save lives at a scale never before imagined. 45 days and $45 is all it takes to restore a severely malnourished child to health in just a few short weeks.
+
+</p>
             </div>
         </div>
     </div>
@@ -191,7 +157,7 @@
                         </li>
 -->
                         <li>
-                            <a href="https://www.facebook.com/uottawaacf/">
+                            <a href="https://www.facebook.com/uottawaacf/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -199,7 +165,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/uottawaacf/">
+                            <a href="https://www.instagram.com/uottawaacf/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
