--- a/eventsFR.html
+++ b/eventsFR.html
@@ -155,14 +155,23 @@
                           <li>26</li>
                           <li>27</li>
                           <li>28</li>
-                          <li>29</li>
+                          <li><span id="myBtn2" style="cursor:pointer" class="meeting">29</span></li>
                           <li>30</li>
                           <li>1</li>
                         </ul>
                 
-                        <!-- Trigger/Open The Modal -->
-<!--                        <button id="myBtn">Open Modal</button>-->
+                        <!-- The MEETING Modal -->
+                        <div id="myModal2" class="modal">
 
+                          <!-- Modal content -->
+                          <div class="modal-content">
+                            <span class="close">x</span>
+<!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
+                            <h1>ACF Assemblée Générale</h1>
+                              <p>Action Contre la Faim uOottawa vous invite à notre première assemblée générale! Joignez-nous pour une soirée où vous pouvez en apprendre davantage au sujet de l’équipe ACF, de nos objectifs pour l’année scolaire 2016 – 2017, de la manière dont vous pouvez vous impliquer et encore plus! La soirée débute à 19h00, des breuvages et collations seront offerts gratuitement! </p>
+                          </div>
+                            
+                </div>
                         <!-- The Modal -->
                         <div id="myModal" class="modal">
 
