change quote (FR page)

--- a/indexFR.html
+++ b/indexFR.html
@@ -93,7 +93,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
                         <div class ="textheading">
-                            <h3><span class="subheading" style="font-family:cursive">"Many small people, in small places, doing small things, can change the world."</span></h3>
+                            <h3><span class="subheading" style="font-family:cursive">"Plusieurs petites personnes, dans des petites places, faisant de petitess choses, peuvent changer le Monde. "</span></h3>
                             <hr class="small">
                             <span class="subheading ">Eduardo Galeano</span>
                             <a class="btn button" href="http://team45.actionagainsthungerevents.ca/uottawa" target="_blank"><small>Faire un don</small></a>
