updated nav bar

--- a/events.html
+++ b/events.html
@@ -66,13 +66,13 @@
                         <a href="post.html">News</a>
                     </li>
                     <li>
-                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Donate</a>
+                        <a href="about.html">Meet the team</a>
                     </li>
                     <li>
                         <a href="events.html">Events</a>
                     </li>
                     <li>
-                        <a href="about.html">Meet the team</a>
+                        <a href="http://team45.actionagainsthungerevents.ca/uottawa" target="_blank">Donate</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact US</a>
