--- a/eventsFR.html
+++ b/eventsFR.html
@@ -66,16 +66,16 @@
                         <a href="postFR.html">Nouvelles</a>
                     </li>
                     <li>
-                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Faire un Don</a>
+                        <a href="aboutFR.html">L'équipe</a>
                     </li>
                     <li>
                         <a href="eventsFR.html">Évènements</a>
                     </li>
                     <li>
-                        <a href="aboutFR.html">L'équipe</a>
+                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Faire un Don</a>
                     </li>
                     <li>
-                        <a href="contactFR.html">Contactez Nous</a>
+                        <a href="contactFR.html">Contactez nous</a>
                     </li>
 
                 </ul>
