--- a/postFR.html
+++ b/postFR.html
@@ -60,13 +60,13 @@
                         <a href="postFR.html">Nouvelles</a>
                     </li>
                     <li>
-                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Faire un don</a>
+                        <a href="aboutFR.html">L'équipe</a>
                     </li>
                     <li>
                         <a href="eventsFR.html">Évènements</a>
                     </li>
                     <li>
-                        <a href="aboutFR.html">L'équipe</a>
+                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Faire un Don</a>
                     </li>
                     <li>
                         <a href="contactFR.html">Contactez nous</a>
