--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                             
                             
                             <div id="sample_goal"></div>
-                            <p><small><small><i>Reset Sept 1st 2016. Last updated Sept 28th 2016. Goal: 8000$. Raised: 688$ *Excludes online campaign</i></small></small></p>
+                            <p><small><small><i>Reset May 1st 2016. Last updated Sept 28th 2016. Goal: 8000$. Raised: 1529.50$ *Excludes online campaign</i></small></small></p>
 
 
                             <div class = image >
@@ -195,9 +195,9 @@ Hunger claims one million young lives every year, but for the first time in hist
         $(document).ready(function(){
             $('#sample_goal').goalProgress({
                 goalAmount: 8000,
-                currentAmount: 688,
+                currentAmount: 1529.50,
                 textBefore: '$',
-                textAfter: ' raised'
+//                textAfter: ' raised'
             });
         });
     </script>
