open links in new tab

--- a/indexFR.html
+++ b/indexFR.html
@@ -72,7 +72,7 @@
                         <a href="eventsFR.html">Évènements</a>
                     </li>
                     <li>
-                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Faire un Don</a>
+                        <a href="http://team45.actionagainsthungerevents.ca/uottawa" target="_blank">Faire un Don</a>
                     </li>
                     <li>
                         <a href="contactFR.html">Contactez nous</a>
