--- a/post.html
+++ b/post.html
@@ -201,7 +201,7 @@
                         </li>
 -->
                         <li>
-                            <a href="https://www.facebook.com/uottawaacf/">
+                            <a href="https://www.facebook.com/uottawaacf/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -209,7 +209,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/uottawaacf/">
+                            <a href="https://www.instagram.com/uottawaacf/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
