--- a/postFR.html
+++ b/postFR.html
@@ -66,7 +66,7 @@
                         <a href="eventsFR.html">Évènements</a>
                     </li>
                     <li>
-                        <a href="http://team45.actionagainsthungerevents.ca/uottawa">Faire un Don</a>
+                        <a href="http://team45.actionagainsthungerevents.ca/uottawa" target="_blank">Faire un Don</a>
                     </li>
                     <li>
                         <a href="contactFR.html">Contactez nous</a>
@@ -168,7 +168,7 @@
                         </li>
 -->
                         <li>
-                            <a href="https://www.facebook.com/uottawaacf/">
+                            <a href="https://www.facebook.com/uottawaacf/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -176,7 +176,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/uottawaacf/">
+                            <a href="https://www.instagram.com/uottawaacf/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
