just corrected my name lol

--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
                                     </div>
                                     <div class="back">
                                         <hr><hr><hr>
-                                        <span><center>Houssam Begja</center></span>
+                                        <span><center>Houssam Bedja</center></span>
                                         <span><center>IT Officer</center></span><hr>
                                         <span><center><small> </small></center></span>
                                         <!-- back content -->
