--- a/post.html
+++ b/post.html
@@ -143,7 +143,7 @@
                     <p><b>Sarah, why did you start an Action Against Hunger Youth Chapter at the University of Ottawa?</b></p>
                     <p>“My involvement with Action Against Hunger actually begun when I was in high school at École Secondaire Roméo Dallaire in my hometown Barrie, Ontario. When I first started the club I was focused on the main goal of Action Against Hunger, to end world hunger, but knew little about the programs they delivered. After two years of working with the organization, learning about their work in depth and receiving their constant support and encouragement, it only seemed fitting to start a youth chapter at the university of Ottawa when I began attending it.”, said Sarah. </p>
 
-                        <p>Check out the full interview posted on the Action Against Hunger website <a href="http://actioncontrelafaim.ca/discover-what-inspired-sarah-houda-to-get-involved-in-the-fight-against-hunger/">here!</a>.        
+                        <p>Check out the full interview posted on the Action Against Hunger website <a href="http://actioncontrelafaim.ca/discover-what-inspired-sarah-houda-to-get-involved-in-the-fight-against-hunger/">here!</a>        
                 </div>
                 <hr>
 
