New Event-Costume Karaoke

--- a/events.html
+++ b/events.html
@@ -149,7 +149,7 @@
                           <li>18</li>
                           <li>19</li>
                           <li>20</li>
-                          <li>21</li>
+                          <li><span id="myBtn" style="cursor:pointer" class="Karaoke">21</span></li>
                           <li>22</li>
                           <li>23</li>
                           <li>24</li>
@@ -167,26 +167,42 @@
 -->
 
                         <!-- The MEETING Modal -->
+<!--
                         <div id="myModal2" class="modal">
 
-                          <!-- Modal content -->
+                           Modal content 
                           <div class="modal-content">
                             <span class="close">x</span>
-<!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
                             <h1>ACF First General Meeting.</h1>
                               <p>Action Against Hunger uOttawa would like to invite you to our first general assembly! Join us for a night in which you can learn about the ACF uottawa team, our plans and goals for the 2016-2017 academic year, how you can be involved and more! Event starts at 7:00pm, free snacks and drinks will be provided! </p>
                           </div>
-
                         </div>
+
+-->
+
                         <!-- The Modal -->
                         <div id="myModal" class="modal">
 
                           <!-- Modal content -->
                           <div class="modal-content">
                             <span class="close">x</span>
-<!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
-                            <h1>Club week</h1>
-                              <p>Come check out our table where you will have the opportunity to meet our members as well as learn about the various events we hold to raise funds for the cause. You will also have the opportunity to join our club. </p>
+<!--                              <img src="img/costumekaraoke.jpg" HEIGHT="200" WIDTH="800" >-->
+                            <h1>Costume Karaoke</h1>
+                              <p>Kick off the start to reading week with some Costume Karaoke fun at Café Alt on October 21st at 6:00pm!</p>
+                              <span>PRIZES will be handed out to : </span>
+                              <ul>
+                                <li>1. Best individual costume!</li>
+                                <li>2. Best team costume!</li>
+                                <li>3. Best karaoke performance!</li>
+                            </ul>
+
+                              <p>FOOD & DRINKS ARE PROVIDED! </p>
+
+                              <p>12$ admission fee — Proceeds will be going to Action Against Hunger, a group committed to ending world hunger! </p>
+
+                              <p>To purchase tickets e-transfer to uottawaacf@gmail.com or contact (613) 600 - 9400 </p>
+
+                              <p>Check out our <a href="https://www.facebook.com/events/198277957265260/?notif_t=plan_user_associated&notif_id=1475790179579231" target="_blank"> Facebook page!</a></p>
                           </div>
                             
                           
