--- a/eventsFR.html
+++ b/eventsFR.html
@@ -149,7 +149,7 @@
                           <li>18</li>
                           <li>19</li>
                           <li>20</li>
-                          <li>21</li>
+                          <li><span id="myBtn" style="cursor:pointer" class="Karaoke">21</span></li>
                           <li>22</li>
                           <li>23</li>
                           <li>24</li>
@@ -163,17 +163,18 @@
                         </ul>
                 
                         <!-- The MEETING Modal -->
+<!--
                         <div id="myModal2" class="modal">
 
-                          <!-- Modal content -->
+                           Modal content 
                           <div class="modal-content">
                             <span class="close">x</span>
-<!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
                             <h1>ACF Assemblée Générale</h1>
                               <p>Action Contre la Faim uOottawa vous invite à notre première assemblée générale! Joignez-nous pour une soirée où vous pouvez en apprendre davantage au sujet de l’équipe ACF, de nos objectifs pour l’année scolaire 2016 – 2017, de la manière dont vous pouvez vous impliquer et encore plus! La soirée débute à 19h00, des breuvages et collations seront offerts gratuitement! </p>
                           </div>
                             
                 </div>
+-->
                         <!-- The Modal -->
                         <div id="myModal" class="modal">
 
@@ -181,8 +182,23 @@
                           <div class="modal-content">
                             <span class="close">x</span>
 <!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
-                            <h1>Semaine des clubs </h1>
-                              <p> Venez visiter notre table lors de la semaine des clubs. Vous aurrez la chance de rencontrez nos membres et également l'opportinité de nous joindres en tant que bénévole.</p>
+                            <h1>Karaoke en Costume</h1>
+                              <p>Commencer votre semaine d'étude avec du Karaoke en Costume qui aura lieu a Café Alt le 21 Octobre a 18h!</p>
+                              <span>Il y aura des PRIX a gagné pour les catégories suivante: </span>
+                              <ul>
+                                <li>1. Meilleur costume individuel</li>
+                                <li>2. Meilleur costume d'équipe</li>
+                                <li>3. Meilleur performance Karaoke</li>
+                            </ul>
+
+                              <span>Des boissons et de la nurriture seront fournit! </span>
+
+                              <p>Prix d'admission: 12$ - Tout les fonds seront envoyer a Action Contre la Faim, une organisation qui a comme mission de contrer la malnoutrition! </p>
+
+                              <p>Pour acheter des billet: e-transer à uoottawaacf@gmail.com
+ou contactez (613)600-9400 </p>
+
+                              <p>Visitez notre page <a href="https://www.facebook.com/events/198277957265260/?notif_t=plan_user_associated&notif_id=1475790179579231" target="_blank"> Facebook</a> pour plus d'information!</p>
                           </div>
 
                         </div>
