Fixed Vik's name

--- a/about.html
+++ b/about.html
@@ -275,7 +275,7 @@
                                     </div>
                                     <div class="back">
                                         <hr><hr><hr>
-                                        <span><center>Viktor Raina</center></span>
+                                        <span><center>Vikrant Raina</center></span>
                                         <span><center>Clubs Liaison Officer</center></span>
                                         <span><center><small> </small></center></span>                                        <!-- back content -->
                                     </div>
