--- a/aboutFR.html
+++ b/aboutFR.html
@@ -272,7 +272,7 @@
                                     </div>
                                     <div class="back">
                                         <hr><hr><hr>
-                                        <span><center>Viktor Raina</center></span>
+                                        <span><center>Vikrant Raina</center></span>
                                         <span><center>Agent de liaison </center></span>
                                         <span><center><small> </small></center></span>                                        <!-- back content -->
                                     </div>
