Calendar Update- November

--- a/eventsFR.html
+++ b/eventsFR.html
@@ -107,7 +107,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                         <div class="month">
                           <ul>
-                            <li style="text-align:center">Octobre<br><span style="font-size:18px">2016</span>
+                            <li style="text-align:center">Novembre<br><span style="font-size:18px">2016</span>
                             </li>
                           </ul>
                         </div>
@@ -123,10 +123,6 @@
                         </ul>
 
                         <ul class="days">
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
                           <li></li>
                           <li></li>
                           <li>1</li>
@@ -149,7 +145,7 @@
                           <li>18</li>
                           <li>19</li>
                           <li>20</li>
-                          <li><span id="myBtn" style="cursor:pointer" class="Karaoke">21</span></li>
+                          <li>21</li>
                           <li>22</li>
                           <li>23</li>
                           <li>24</li>
@@ -159,7 +155,6 @@
                           <li>28</li>
                           <li>29</li>
                           <li>30</li>
-                          <li>31</li>
                         </ul>
                 
                         <!-- The MEETING Modal -->
@@ -176,30 +171,18 @@
                 </div>
 -->
                         <!-- The Modal -->
+<!--
                         <div id="myModal" class="modal">
 
-                          <!-- Modal content -->
+                           Modal content 
                           <div class="modal-content">
                             <span class="close">x</span>
-<!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
+                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">
                             <h1>Karaoke en Costume</h1>
                               <p>Commencer votre semaine d'étude avec du Karaoke en Costume qui aura lieu a Café Alt le 21 Octobre a 18h!</p>
-                              <span>Il y aura des PRIX a gagné pour les catégories suivante: </span>
-                              <ul>
-                                <li>1. Meilleur costume individuel</li>
-                                <li>2. Meilleur costume d'équipe</li>
-                                <li>3. Meilleur performance Karaoke</li>
-                            </ul>
 
-                              <span>Des boissons et de la nurriture seront fournit! </span>
-
-                              <p>Prix d'admission: 12$ - Tout les fonds seront envoyer a Action Contre la Faim, une organisation qui a comme mission de contrer la malnoutrition! </p>
-
-                              <p>Pour acheter des billet: e-transer à uoottawaacf@gmail.com
-ou contactez (613)600-9400 </p>
-
-                              <p>Visitez notre page <a href="https://www.facebook.com/events/198277957265260/?notif_t=plan_user_associated&notif_id=1475790179579231" target="_blank"> Facebook</a> pour plus d'information!</p>
                           </div>
+-->
 
                         </div>
                 
