--- a/eventsFR.html
+++ b/eventsFR.html
@@ -150,7 +150,7 @@
                           <li>23</li>
                           <li>24</li>
                           <li>25</li>
-                          <li>26</li>
+                          <li><span id="myBtn" style="cursor:pointer" class="pjday">26</span></li>
                           <li>27</li>
                           <li>28</li>
                           <li>29</li>
@@ -171,18 +171,16 @@
                 </div>
 -->
                         <!-- The Modal -->
-<!--
                         <div id="myModal" class="modal">
 
-                           Modal content 
+<!--                           Modal content -->
                           <div class="modal-content">
                             <span class="close">x</span>
-                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">
-                            <h1>Karaoke en Costume</h1>
-                              <p>Commencer votre semaine d'étude avec du Karaoke en Costume qui aura lieu a Café Alt le 21 Octobre a 18h!</p>
+<!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
+                            <h1>Journée Pyjama uOttawa</h1>
+                              <p>Ramenons les bons souvenirs avec l’ultime JOURNÉE PYJAMA partout sur le campus! Oui, vous avez bien lu, le vendredi 25 novembre, revenons à l'école dans nos pyjamas les plus doux et confortables et célébrons la dernière semaine de cours! Cet événement ne peut être réussi qu'avec la participation de tous les étudiants, donc cliquer j’aime, partagez et invitez vos amis! Si vous souhaitez aider à éliminer la faim dans le monde, nous vous invitons également à faire visite à notre vente de pâtisseries aux bananes dans le Centre de l’université Agora entre 9h00 et 16h00!</p>
 
                           </div>
--->
 
                         </div>
                 
