--- a/events.html
+++ b/events.html
@@ -107,7 +107,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                         <div class="month">
                           <ul>
-                            <li style="text-align:center">November<br><span style="font-size:18px">2016</span>
+                            <li style="text-align:center">February<br><span style="font-size:18px">2017</span>
                             </li>
                           </ul>
                         </div>
@@ -123,7 +123,8 @@
                         </ul>
 
                         <ul class="days">
-                          <li></li>
+                            <li></li>
+                            <li></li>
                           <li></li>
                           <li>1</li>
                           <li>2</li>
@@ -141,7 +142,7 @@
                           <li>14</li>
                           <li>15</li>
                           <li>16</li>
-                          <li>17</li>
+                            <li><span id="myBtn" style="cursor:pointer" class="event">17</span></li>
                           <li>18</li>
                           <li>19</li>
                           <li>20</li>
@@ -150,11 +151,9 @@
                           <li>23</li>
                           <li>24</li>
                           <li>25</li>
-                          <li><span id="myBtn" style="cursor:pointer" class="pjday">26</span></li>
+                          <li>26</li>
                           <li>27</li>
                           <li>28</li>
-                          <li>29</li>
-                          <li>30</li>
                         </ul>
 <!--
 <li><span id="myBtn" style="cursor:pointer" class="clubweek">16</span></li>
