--- a/eventsFR.html
+++ b/eventsFR.html
@@ -107,7 +107,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                         <div class="month">
                           <ul>
-                            <li style="text-align:center">Novembre<br><span style="font-size:18px">2016</span>
+                            <li style="text-align:center">Février<br><span style="font-size:18px">2017</span>
                             </li>
                           </ul>
                         </div>
@@ -125,6 +125,7 @@
                         <ul class="days">
                           <li></li>
                           <li></li>
+                            <li></li>
                           <li>1</li>
                           <li>2</li>
                           <li>3</li>
@@ -141,7 +142,7 @@
                           <li>14</li>
                           <li>15</li>
                           <li>16</li>
-                          <li>17</li>
+                            <li><span id="myBtn" style="cursor:pointer" class="event">17</span></li>
                           <li>18</li>
                           <li>19</li>
                           <li>20</li>
@@ -150,11 +151,9 @@
                           <li>23</li>
                           <li>24</li>
                           <li>25</li>
-                          <li><span id="myBtn" style="cursor:pointer" class="pjday">26</span></li>
+                          <li>26</li>
                           <li>27</li>
                           <li>28</li>
-                          <li>29</li>
-                          <li>30</li>
                         </ul>
                 
                         <!-- The MEETING Modal -->
